--- a/ERP/Core.Erp.Web/Areas/General/Views/Banco/_GridViewPartial_banco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Banco/_GridViewPartial_banco.cshtml
@@ -3,7 +3,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_banco";
-        settings.CallbackRouteValues = new { Controller = "Banco", Action = "GridViewPartial_banco" };
+        settings.CallbackRouteValues = new { Controller = "Banco", Action = "GridViewPartial_banco", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdBanco";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -94,6 +92,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
