--- a/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.General.tb_bodega_Info
 @{
     ViewBag.Title = "Consulta de bodegas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,10 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_bodega", new { IdSucursal = ViewBag.IdSucursal })
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdSucursal, new { @id = "IdSucursal" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_bodega", new { IdSucursal = Model.IdSucursal, Nuevo = ViewBag.Nuevo })
 }
 
 <div class="box-footer">
