--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.General.tb_ciudad_Info
 @{
     ViewBag.Title = "Consulta de ciudades";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,11 +10,14 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdPais, new { @id = "IdPais" })
+    @Html.HiddenFor(q => q.IdProvincia, new { @id = "IdProvincia" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_ciudad", new { IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais });
+    @Html.Action("GridViewPartial_ciudad", new { IdProvincia = Model.IdProvincia, IdPais = Model.IdPais, Nuevo = ViewBag.Nuevo });
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia",new {  IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais, Area = "General" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia",new {  IdProvincia = Model.IdProvincia, IdPais = Model.IdPais, Area = "General" },null)">Volver</a>
     </div>
 
 }
