--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
@@ -11,9 +11,9 @@
 
 @using (Html.BeginForm("Modificar", "Ciudad", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdCiudad)
+    @Html.HiddenFor(q => q.IdPais)
     @Html.HiddenFor(q => q.IdProvincia)
-
+    @Html.HiddenFor(q => q.IdCiudad)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
