--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Nuevo.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Nuevo", "Ciudad", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdPais)
     @Html.HiddenFor(q => q.IdProvincia)
     <div class="row">
         <div class="col-md-12">
