--- a/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.General.tb_empresa_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de empresas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -11,12 +12,14 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <a class="btn btn-primary" href="@Url.Action("Importar","Empresa",new { Area = "General", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
 
-    @Html.Action("GridViewPartial_empresa")
+    @Html.Action("GridViewPartial_empresa", new { Nuevo = ViewBag.Nuevo })
 
 }
