--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.General.tb_pais_Info
 @{
     ViewBag.Title = "Consulta de países";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,5 +10,6 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_pais")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_pais", new { Nuevo = ViewBag.Nuevo })
 }
