--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
@@ -11,9 +11,10 @@
 
 @using (Html.BeginForm("Modificar", "Parroquia", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdPais)
+    @Html.HiddenFor(q => q.IdProvincia)
     @Html.HiddenFor(q => q.IdCiudad_Canton)
     @Html.HiddenFor(q => q.IdParroquia)
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
