--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_provincia";
-        settings.CallbackRouteValues = new { Controller = "Provincia", Action = "GridViewPartial_provincia", IdPais = ViewBag.IdPais };
+        settings.CallbackRouteValues = new { Controller = "Provincia", Action = "GridViewPartial_provincia", IdPais = ViewBag.IdPais, Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdProvincia";
         //Configuración para que la grilla no muestre texto completo
@@ -60,20 +60,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdPais = DataBinder.Eval(tc.DataItem, "IdPais"), IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdPais = DataBinder.Eval(tc.DataItem, "IdPais"), IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdPais = ViewBag.IdPais }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdPais = ViewBag.IdPais }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -108,6 +106,7 @@
                 }).Render();
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
