--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleAnticipo_Proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbCtaCbleAnticipo_Proveedor.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "IdCtaCble_Anticipo";
         settings.Width = Unit.Percentage(100);
-        settings.Properties.DropDownWidth = Unit.Percentage(100);
+        settings.Properties.DropDownWidth = Unit.Pixel(1000);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
         settings.CallbackRouteValues = new { Controller = "ClaseProveedor", Action = "CmbCtaCbleAnticipo_Proveedor", Area = "CuentasPorPagar" };
         settings.Properties.CallbackPageSize = 15;
