--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -199,7 +199,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-offset-5 col-md-1">
+            <div class="col-md-2">
+                <div class="bg-green color-palette form-control" id="DivMicroEmpresa" style="display:none">
+                    <span class="center-block">Régimen de microempresas</span>
+                </div>
+            </div>
+            <div class="col-md-offset-3 col-md-1">
                 <div id="rideFact" hidden>
                     <button type="button" class="btn btn-primary form-control" onclick="ImprimirRIDEElectronico();" title="Imprimir RIDE de documento electrónico">
                         <i class="fa fa-print"></i>  RIDE Doc.
@@ -896,6 +901,7 @@
                         $("#IdOrden_giro_Tipo").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
                         $("#cmbTipoDocu_modif").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
                     });
+
                 },
                 error: function (error) {
                 }
@@ -961,6 +967,10 @@
                     $("#co_plazo").val(data.pr_plazo);
                     var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
                     co_FechaFactura_vct.SetValue(new Date(date));
+                    if (data.EsMicroEmpresa == 1) {
+                        $("#DivMicroEmpresa").show();
+                    }else
+                        $("#DivMicroEmpresa").hide();
                 },
                 error: function (error) {
                 }
