--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_cobro_Info
 @{
-    ViewBag.Title = "Aplicar retención";
+    ViewBag.Title = "Consultar retención";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -50,7 +50,26 @@
         win.focus();
     }
 </script>
+<script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
 
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+</script>
 @using (Html.BeginForm("AplicarRetencion", "CobranzaRetenciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
@@ -62,6 +81,10 @@
     @Html.HiddenFor(q => q.IdCbteVta)
     @Html.HiddenFor(q => q.vt_tipoDoc)
     @Html.HiddenFor(q => q.cr_TotalCobro)
+
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
 
     if (@ViewBag.mensaje != null)
     {
@@ -81,7 +104,44 @@
             </h4>
         </div>
     }
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("CobrosSinRetencion","CobranzaRetenciones",new { Area = "CuentasPorCobrar", IdEmpresa=Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("AplicarRetencion", "CobranzaRetenciones", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega, IdCbteVta = Model.IdCbteVta, CodTipoDocumento = Model.vt_tipoDoc }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "CobranzaRetenciones", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega, IdCbteVta = Model.IdCbteVta, CodTipoDocumento = Model.vt_tipoDoc }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" title="Imprimir" onclick="Imprimir();">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -113,7 +173,7 @@
                     @Html.ValidationMessageFor(q => q.cr_EsProvision, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-2 col-md-2">
+            <div class="col-md-offset-3 col-md-2">
                 <div class="form-group">
                     <label for="cr_fecha">Fecha*</label>
                     @Html.DevExpress().DateEditFor(q=> q.cr_fecha, settings =>
@@ -129,22 +189,6 @@
                     @Html.ValidationMessageFor(q => q.cr_fecha, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" title="Imprimir" onclick="Imprimir();">
-                        <i class="fa fa-print"></i>
-                    </button>
-                </div>
-            </div>
-            @*<div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("CobrosSinRetencion","CobranzaRetenciones",new { Area = "CuentasPorCobrar" })">
-                        <i class="fa fa-plus"></i>
-                    </a>
-                </div>
-            </div>*@
         </div>
     </div>
 
@@ -201,7 +245,6 @@
 
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "CobranzaRetenciones", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
